--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
@@ -2,6 +2,8 @@
   "item.jwn_s_odds_and_ends.first_test": "첫번째 테스트 아이템",
   "item.jwn_s_odds_and_ends.second_test": "두번째 테스트 아이템",
   "item.jwn_s_odds_and_ends.third_test": "세번째 테스트 아이템",
-  "item.jwn_s_odds_and_ends.poop": "똥",
-  "item.jwn_s_odds_and_ends.cell_phone": "핸드폰"
+  "item.jwn_s_odds_and_ends.poop_item": "똥",
+  "item.jwn_s_odds_and_ends.cell_phone": "핸드폰",
+
+  "block.jwn_s_odds_and_ends.poop_block": "똥"
 }
