amulet, four-leaf clover

--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
@@ -4,6 +4,9 @@
   "item.jwn_s_odds_and_ends.third_test": "세번째 테스트 아이템",
   "item.jwn_s_odds_and_ends.poop_item": "똥",
   "item.jwn_s_odds_and_ends.cell_phone": "핸드폰",
+  "item.jwn_s_odds_and_ends.amulet": "부적",
+  "item.jwn_s_odds_and_ends.four_leaf_clover": "네잎클로버",
+
 
   "block.jwn_s_odds_and_ends.poop_block": "똥"
 }
