--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/en_us.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/en_us.json
@@ -4,6 +4,8 @@
   "item.jwn_s_odds_and_ends.third_test": "Third Test Item",
   "item.jwn_s_odds_and_ends.poop_item": "Poop",
   "item.jwn_s_odds_and_ends.cell_phone": "Cell Phone",
+  "item.jwn_s_odds_and_ends.amulet": "Amulet",
+  "item.jwn_s_odds_and_ends.four_leaf_clover": "Four-Leaf Clover",
 
   "block.jwn_s_odds_and_ends.poop_block": "Poop"
 }
