dynamite, light feather

--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
@@ -6,7 +6,8 @@
   "item.jwn_s_odds_and_ends.cell_phone": "핸드폰",
   "item.jwn_s_odds_and_ends.amulet": "부적",
   "item.jwn_s_odds_and_ends.four_leaf_clover": "네잎클로버",
-
+  "item.jwn_s_odds_and_ends.dynamite": "다이너마이트",
+  "item.jwn_s_odds_and_ends.light_feather": "가벼운 깃털",
 
   "block.jwn_s_odds_and_ends.poop_block": "똥"
 }
