--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/en_us.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/en_us.json
@@ -6,6 +6,8 @@
   "item.jwn_s_odds_and_ends.cell_phone": "Cell Phone",
   "item.jwn_s_odds_and_ends.amulet": "Amulet",
   "item.jwn_s_odds_and_ends.four_leaf_clover": "Four-Leaf Clover",
+  "item.jwn_s_odds_and_ends.dynamite": "Dynamite",
+  "item.jwn_s_odds_and_ends.light_feather": "Light Feather",
 
   "block.jwn_s_odds_and_ends.poop_block": "Poop"
 }
