--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/en_us.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/en_us.json
@@ -9,5 +9,12 @@
   "item.jwn_s_odds_and_ends.dynamite": "Dynamite",
   "item.jwn_s_odds_and_ends.light_feather": "Light Feather",
 
-  "block.jwn_s_odds_and_ends.poop_block": "Poop"
+  "block.jwn_s_odds_and_ends.poop_block": "Poop",
+
+  "tooltip.jwn_s_odds_and_ends.poop_item": "Poop",
+  "tooltip.jwn_s_odds_and_ends.cell_phone": "Cell Phone",
+  "tooltip.jwn_s_odds_and_ends.amulet": "Amulet",
+  "tooltip.jwn_s_odds_and_ends.four_leaf_clover": "Four-Leaf Clover",
+  "tooltip.jwn_s_odds_and_ends.dynamite": "Dynamite",
+  "tooltip.jwn_s_odds_and_ends.light_feather": "Light Feather"
 }
