--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
@@ -9,5 +9,12 @@
   "item.jwn_s_odds_and_ends.dynamite": "다이너마이트",
   "item.jwn_s_odds_and_ends.light_feather": "가벼운 깃털",
 
-  "block.jwn_s_odds_and_ends.poop_block": "똥"
+  "block.jwn_s_odds_and_ends.poop_block": "똥",
+
+  "tooltip.jwn_s_odds_and_ends.poop_item": "설명 1",
+  "tooltip.jwn_s_odds_and_ends.cell_phone": "설명 2",
+  "tooltip.jwn_s_odds_and_ends.amulet": "설명 3",
+  "tooltip.jwn_s_odds_and_ends.four_leaf_clover": "설명 4",
+  "tooltip.jwn_s_odds_and_ends.dynamite": "설명 5",
+  "tooltip.jwn_s_odds_and_ends.light_feather": "설명 6"
 }
