stat gui, screen

--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/en_us.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/en_us.json
@@ -9,6 +9,7 @@
   "item.jwn_s_odds_and_ends.dynamite": "Dynamite",
   "item.jwn_s_odds_and_ends.light_feather": "Light Feather",
   "item.jwn_s_odds_and_ends.wormhole": "Wormhole",
+  "item.jwn_s_odds_and_ends.max_stat_item": "Max Stat Item",
 
   "block.jwn_s_odds_and_ends.poop_block": "Poop",
 
