--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
@@ -9,6 +9,7 @@
   "item.jwn_s_odds_and_ends.dynamite": "다이너마이트",
   "item.jwn_s_odds_and_ends.light_feather": "가벼운 깃털",
   "item.jwn_s_odds_and_ends.wormhole": "웜홀",
+  "item.jwn_s_odds_and_ends.max_stat_item": "최대 스텟",
 
   "block.jwn_s_odds_and_ends.poop_block": "똥",
 
