--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
@@ -9,15 +9,32 @@
   "item.jwn_s_odds_and_ends.dynamite": "다이너마이트",
   "item.jwn_s_odds_and_ends.light_feather": "가벼운 깃털",
   "item.jwn_s_odds_and_ends.wormhole": "웜홀",
+  "item.jwn_s_odds_and_ends.balloon": "풍선",
+  "item.jwn_s_odds_and_ends.leather_wallet": "가죽지갑",
+  "item.jwn_s_odds_and_ends.can": "깡통",
+  "item.jwn_s_odds_and_ends.turtle_shell": "거북이 등껍질",
+  "item.jwn_s_odds_and_ends.puffer_skin": "복어 피부",
+  "item.jwn_s_odds_and_ends.phantom_eye": "펜텀의 눈",
+  "item.jwn_s_odds_and_ends.hoglin_tusk": "호글린의 뿔",
+  "item.jwn_s_odds_and_ends.pig_nose": "돼지코",
+
   "item.jwn_s_odds_and_ends.max_stat_item": "최대 스텟",
 
   "block.jwn_s_odds_and_ends.poop_block": "똥",
 
   "tooltip.jwn_s_odds_and_ends.remove": "§c삭제하려면 누르세요!",
-  "tooltip.jwn_s_odds_and_ends.poop_item": "설명 1",
-  "tooltip.jwn_s_odds_and_ends.cell_phone": "설명 2",
-  "tooltip.jwn_s_odds_and_ends.amulet": "설명 3",
-  "tooltip.jwn_s_odds_and_ends.four_leaf_clover": "설명 4",
-  "tooltip.jwn_s_odds_and_ends.dynamite": "설명 5",
-  "tooltip.jwn_s_odds_and_ends.light_feather": "설명 6"
+  "tooltip.jwn_s_odds_and_ends.poop_item": "똥",
+  "tooltip.jwn_s_odds_and_ends.cell_phone": "핸드폰",
+  "tooltip.jwn_s_odds_and_ends.amulet": "부적",
+  "tooltip.jwn_s_odds_and_ends.four_leaf_clover": "네잎클로버",
+  "tooltip.jwn_s_odds_and_ends.dynamite": "다이너마이트",
+  "tooltip.jwn_s_odds_and_ends.light_feather": "웜홀",
+  "tooltip.jwn_s_odds_and_ends.balloon": "풍선",
+  "tooltip.jwn_s_odds_and_ends.leather_wallet": "가죽지갑",
+  "tooltip.jwn_s_odds_and_ends.can": "깡통",
+  "tooltip.jwn_s_odds_and_ends.turtle_shell": "거북이 등껍질",
+  "tooltip.jwn_s_odds_and_ends.puffer_skin": "복어 피부",
+  "tooltip.jwn_s_odds_and_ends.phantom_eye": "펜텀의 눈",
+  "tooltip.jwn_s_odds_and_ends.hoglin_tusk": "호글린의 뿔",
+  "tooltip.jwn_s_odds_and_ends.pig_nose": "돼지코"
 }
