glow_ink, add tooltip & detail tooltip

--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
@@ -10,7 +10,7 @@
   "item.jwn_s_odds_and_ends.four_leaf_clover": "네잎클로버",
   "item.jwn_s_odds_and_ends.dynamite": "다이너마이트",
   "item.jwn_s_odds_and_ends.light_steps": "가벼운 발걸음",
-  "item.jwn_s_odds_and_ends.wormhole": "웜홀",
+  "item.jwn_s_odds_and_ends.wormhole": "순간이동장치",
   "item.jwn_s_odds_and_ends.sense_of_balance": "뛰어난 균형감각",
   "item.jwn_s_odds_and_ends.mysterious_yellow_liquid": "알 수 없는 노란 액체",
   "item.jwn_s_odds_and_ends.can": "깡통",
@@ -25,39 +25,71 @@
   "item.jwn_s_odds_and_ends.piggy_bank": "돼지 저금통",
   "item.jwn_s_odds_and_ends.storage_box": "수상한 보관함",
   "item.jwn_s_odds_and_ends.turtle_shell": "거북이 등껍질",
-  "item.jwn_s_odds_and_ends.orb_of_eternal_life": "영생의 구슬",
+  "item.jwn_s_odds_and_ends.stone_of_life": "생명의 돌",
+  "item.jwn_s_odds_and_ends.glow_ink": "발광 먹물",
 
   "block.jwn_s_odds_and_ends.poo_block": "똥",
   "block.jwn_s_odds_and_ends.gold_poo_block": "황금 똥",
 
   "tooltip.jwn_s_odds_and_ends.remove": "§c삭제하려면 누르세요!",
 
-  "tooltip.jwn_s_odds_and_ends.poo_item": "똥",
-  "tooltip.jwn_s_odds_and_ends.amulet": "부적",
-  "tooltip.jwn_s_odds_and_ends.cell_phone": "핸드폰",
-  "tooltip.jwn_s_odds_and_ends.four_leaf_clover": "네잎클로버",
-  "tooltip.jwn_s_odds_and_ends.dynamite": "다이너마이트",
-  "tooltip.jwn_s_odds_and_ends.light_steps": "가벼운 발걸음",
-  "tooltip.jwn_s_odds_and_ends.wormhole": "웜홀",
-  "tooltip.jwn_s_odds_and_ends.sense_of_balance": "뛰어난 균형감각",
-  "tooltip.jwn_s_odds_and_ends.mysterious_yellow_liquid": "알 수 없는 노란 액체",
-  "tooltip.jwn_s_odds_and_ends.can": "깡통",
-  "tooltip.jwn_s_odds_and_ends.thank_you_for_the_meal": "잘먹겠습니다!",
-  "tooltip.jwn_s_odds_and_ends.hoof": "말발굽",
-  "tooltip.jwn_s_odds_and_ends.witch_wand": "마녀의 마술지팡이",
-  "tooltip.jwn_s_odds_and_ends.dice_level_one": "주사위 LV.1",
-  "tooltip.jwn_s_odds_and_ends.dice_level_two": "주사위 LV.2",
-  "tooltip.jwn_s_odds_and_ends.dice_level_three": "주사위 LV.3",
-  "tooltip.jwn_s_odds_and_ends.dice_level_four": "주사위 LV.4",
-  "tooltip.jwn_s_odds_and_ends.dice_level_five": "주사위 LV.5",
-  "tooltip.jwn_s_odds_and_ends.piggy_bank": "돼지 저금통",
-  "tooltip.jwn_s_odds_and_ends.storage_box": "수상한 보관함",
-  "tooltip.jwn_s_odds_and_ends.turtle_shell": "거북이 등껍질",
-  "tooltip.jwn_s_odds_and_ends.orb_of_eternal_life": "영생의 구슬",
+  "tooltip.jwn_s_odds_and_ends.poo_item": "똥 블록을 생성합니다. 똥 블록은 50%%의 확률로 rare 등급의 아이템을 드롭합니다.",
+  "tooltip.jwn_s_odds_and_ends.amulet": "앤더맨에게 공격을 받으면 일정 확률로 공격한 엔더맨이 사망합니다. 단, 데미지는 막지 못합니다.",
+  "tooltip.jwn_s_odds_and_ends.cell_phone": "(Overworld에서 사용 시) 현재 위치를 핸드폰에 저장합니다. (Nether 또는 Ender에서 사용 시) 저장된 위치로 순간이동합니다.",
+  "tooltip.jwn_s_odds_and_ends.four_leaf_clover": "광물을 캐면 일정 확률로 추가 광물 하나를 더 획득할 수 있습니다. 행운이 증가합니다.",
+  "tooltip.jwn_s_odds_and_ends.dynamite": "점화된 TNT를 설치합니다.",
+  "tooltip.jwn_s_odds_and_ends.light_steps": "신발을 신고 있으면 경작지를 손상시키지 않습니다.",
+  "tooltip.jwn_s_odds_and_ends.wormhole": "일정 거리를 순간이동합니다.",
+  "tooltip.jwn_s_odds_and_ends.sense_of_balance": "높은 확률로 낙사에서 살아남습니다.",
+  "tooltip.jwn_s_odds_and_ends.mysterious_yellow_liquid": "1분동안 획득한 경험치의 (10/11/12/13/14)배를 추가로 획득하는 효과를 얻습니다.",
+  "tooltip.jwn_s_odds_and_ends.can": "일정 확률로 '허기' 상태이상에서 회복됩니다.",
+  "tooltip.jwn_s_odds_and_ends.thank_you_for_the_meal": "인벤토리에 있는 모든 빈 접시에 버섯 스튜를 채웁니다.",
+  "tooltip.jwn_s_odds_and_ends.hoof": "이동속도가 증가합니다.",
+  "tooltip.jwn_s_odds_and_ends.witch_wand": "일정 시간동안 랜덤한 이로운 효과를 획득합니다.",
+  "tooltip.jwn_s_odds_and_ends.dice_level_one": "인벤토리 속 모드 아이템 하나를 무작위 모드 아이템으로 바꿉니다. 더 낮은 등급의 아이템으로 바뀔 수도 있습니다.",
+  "tooltip.jwn_s_odds_and_ends.dice_level_two": "인벤토리 속 모든 모드 아이템을  무작위 모드 아이템으로 바꿉니다. 더 낮은 등급의 아이템으로 바뀔 수도 있습니다.",
+  "tooltip.jwn_s_odds_and_ends.dice_level_three": "인벤토리 속 모든 모드 아이템을 동일한 등급의 무작위 모드 아이템으로 바꿉니다.",
+  "tooltip.jwn_s_odds_and_ends.dice_level_four": "내가 가진 모드 아이템 하나를 한 단계 높은 등급의 무작위 모드 아이템으로 바꿉니다.",
+  "tooltip.jwn_s_odds_and_ends.dice_level_five": "내가 가진 모든 모드 아이템을 무작위 모드 아이템으로 바꿉니다. 50%% 확률로 한 단계 높은 등급의 아이템으로 바뀝니다.",
+  "tooltip.jwn_s_odds_and_ends.piggy_bank": "랜덤한 광물을 획득합니다. 아이템 레벨이 높아질수록 획득하는 광물의 개수가 늘어납니다.",
+  "tooltip.jwn_s_odds_and_ends.storage_box": "수상한 보관함을 사용할 수 있습니다. 아이템 레벨이 높아질수록 사용할 수 있는 보관함 슬롯의 개수가 늘어납니다.",
+  "tooltip.jwn_s_odds_and_ends.turtle_shell": "넉백 저항이 증가합니다.",
+  "tooltip.jwn_s_odds_and_ends.stone_of_life": "체력이 증가합니다.",
+  "tooltip.jwn_s_odds_and_ends.glow_ink": "채굴 속도가 증가합니다.",
+
+  "tooltip.details.jwn_s_odds_and_ends.poo_item": "똥 블록을 생성합니다. 똥 블록은 50%%의 확률로 rare 등급의 아이템을 드롭합니다. 아이템을 최대로 강화할 경우 30%% 확률로 똥 블록 대신 황금 똥 블록을 생성합니다. 황금 똥 블록은 50%%의 확률로 최대 unique 등급의 아이템을 드롭합니다.",
+  "tooltip.details.jwn_s_odds_and_ends.amulet": "앤더맨에게 공격을 받으면 (50/60/70/80/90)%% 확률로 공격한 엔더맨이 사망합니다. 단, 데미지는 막지 못합니다.",
+  "tooltip.details.jwn_s_odds_and_ends.cell_phone": "Overworld에서 사용하면 현재 위치를 핸드폰에 저장합니다. Nether 또는 Ender에서 사용하면 저장된 위치로 순간이동합니다.",
+  "tooltip.details.jwn_s_odds_and_ends.four_leaf_clover": "광물을 캐면 (30/40/50)%% 확률로 추가 광물 하나를 더 획득할 수 있습니다. 행운이 1.1만큼 증가합니다.",
+  "tooltip.details.jwn_s_odds_and_ends.dynamite": "점화된 TNT를 설치합니다.",
+  "tooltip.details.jwn_s_odds_and_ends.light_steps": "신발을 신고 있으면 경작지를 손상시키지 않습니다. 레벨에 따른 상승 효과가 없습니다.",
+  "tooltip.details.jwn_s_odds_and_ends.wormhole": "일정 거리를 순간이동합니다. 아이템 레벨이 높을수록 더 많은 거리를 순간이동할 수 있습니다. 블록을 통과할 수는 없습니다.",
+  "tooltip.details.jwn_s_odds_and_ends.sense_of_balance": "(75/80/85/90/95)%% 확률로 낙사에서 살아남습니다.",
+  "tooltip.details.jwn_s_odds_and_ends.mysterious_yellow_liquid": "1분동안 획득한 경험치의 (10/11/12/13/14)배를 추가로 획득하는 효과를 얻습니다.",
+  "tooltip.details.jwn_s_odds_and_ends.can": "80%%의 확률로 (4-아이템레벨)초 안에 '허기' 상태이상을 회복합니다. 예를 들어, 아이템 레벨이 2인 경우, 80%%의 확률로 2초 안에 '허기' 상태이상을 회복할 수 있습니다.",
+  "tooltip.details.jwn_s_odds_and_ends.thank_you_for_the_meal": "인벤토리에 있는 모든 빈 접시에 버섯 스튜를 채웁니다.",
+  "tooltip.details.jwn_s_odds_and_ends.hoof": "이동속도가 2.7만큼 증가합니다.",
+  "tooltip.details.jwn_s_odds_and_ends.witch_wand": "(12/14/16/18/20)초동안 랜덤한 이로운 효과를 획득합니다.",
+  "tooltip.details.jwn_s_odds_and_ends.dice_level_one": "인벤토리 속 모드 아이템 하나를 무작위 모드 아이템으로 바꿉니다. 더 낮은 등급의 아이템으로 바뀔 수도 있습니다.",
+  "tooltip.details.jwn_s_odds_and_ends.dice_level_two": "인벤토리 속 모든 모드 아이템을  무작위 모드 아이템으로 바꿉니다. 더 낮은 등급의 아이템으로 바뀔 수도 있습니다.",
+  "tooltip.details.jwn_s_odds_and_ends.dice_level_three": "인벤토리 속 모든 모드 아이템을 동일한 등급의 무작위 모드 아이템으로 바꿉니다.",
+  "tooltip.details.jwn_s_odds_and_ends.dice_level_four": "내가 가진 모드 아이템 하나를 한 단계 높은 등급의 무작위 모드 아이템으로 바꿉니다.",
+  "tooltip.details.jwn_s_odds_and_ends.dice_level_five": "내가 가진 모든 모드 아이템을 무작위 모드 아이템으로 바꿉니다. 50%% 확률로 한 단계 높은 등급의 아이템으로 바뀝니다.",
+  "tooltip.details.jwn_s_odds_and_ends.piggy_bank": "랜덤한 광물을 획득합니다. 획득할 수 있는 광물의 종류와 등장 확률은 다음과 같습니다. [석탄(20%%), 구리(20%%), 철(16%%), 레드스톤(10%%), 청금석(10%%), 에메랄드(10%%), 네더석영(5%%), 자수정(5%%), 다이아몬드(3%%), 네더라이트(1%%)]. 아이템 레벨이 높아질수록 획득하는 광물의 개수가 다음과 같이 늘어납니다. [1레벨: 1~6개, 2레벨: 5~10개, 3레벨:9~14개]",
+  "tooltip.details.jwn_s_odds_and_ends.storage_box": "수상한 보관함을 사용할 수 있습니다. 총 9개의 슬롯 중 (아이템 레벨 + 4)개의 슬롯을 사용할 수 있습니다. 수상한 보관함에 보관된 아이템은 플레이어가 죽어도 사라지지 않습니다. 이 아이템을 삭제하더라도 수상한 보관함 속 아이템이 사라지지는 않지만, 수상한 보관함 아이템을 다시 얻기 전까지 보관함을 사용할 수 없게 되니 주의하세요!",
+  "tooltip.details.jwn_s_odds_and_ends.turtle_shell": "넉백 저항이 2.8만큼 증가합니다.",
+  "tooltip.details.jwn_s_odds_and_ends.stone_of_life": "체력이 2.5하트만큼 증가합니다.",
+  "tooltip.details.jwn_s_odds_and_ends.glow_ink": "채굴 속도가 2.6만큼 증가합니다.",
+
+  "text.jwn_s_odds_and_ends.stuff_i_found.name": "아이템 이름: ",
+  "text.jwn_s_odds_and_ends.stuff_i_found.rank": "아이템 등급: ",
+  "text.jwn_s_odds_and_ends.stuff_i_found.type": "아이템 분류: ",
+  "text.jwn_s_odds_and_ends.stuff_i_found.description": "아이템 설명: ",
+
+  "message.jwn_s_odds_and_ends.stuff_i_found.cannot_see": "§c아직은 볼 수 없습니다!",
 
   "message.jwn_s_odds_and_ends.cell_phone.overworld": "현재 위치를 저장합니다.",
   "message.jwn_s_odds_and_ends.cell_phone.no_save": "§c먼저 오버월드에서 장소를 저장해야 합니다!",
-
   "message.jwn_s_odds_and_ends.dice_level_four.cannot_use": "§c업그레이드 할 수 있는 아이템이 없습니다.",
 
   "effect.jwn_s_odds_and_ends.exp_boost": "경험치 부스트"
