--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
@@ -29,6 +29,8 @@
   "item.jwn_s_odds_and_ends.glow_ink": "발광 먹물",
   "item.jwn_s_odds_and_ends.death_scythe": "데스 사이드",
   "item.jwn_s_odds_and_ends.phantom_eye": "펜텀의 눈",
+  "item.jwn_s_odds_and_ends.smart_guy": "똑똑한 청년",
+  "item.jwn_s_odds_and_ends.battery": "배터리",
 
   "block.jwn_s_odds_and_ends.poo_block": "똥",
   "block.jwn_s_odds_and_ends.gold_poo_block": "황금 똥",
@@ -60,6 +62,8 @@
   "tooltip.jwn_s_odds_and_ends.glow_ink": "채굴 속도가 증가합니다.",
   "tooltip.jwn_s_odds_and_ends.death_scythe": "공격력이 크게 증가합니다.",
   "tooltip.jwn_s_odds_and_ends.phantom_eye": "오버월드에서도 침대에서 잠을 잘 수 없습니다.",
+  "tooltip.jwn_s_odds_and_ends.smart_guy": "블록을 캘 때 적절한 도구로 자동 변경해 줍니다.",
+  "tooltip.jwn_s_odds_and_ends.battery": "사용하면 쿨타임을 초기화합니다.",
 
   "tooltip.details.jwn_s_odds_and_ends.poo_item": "똥 블록을 생성합니다. 똥 블록은 50%%의 확률로 rare 등급의 아이템을 드롭합니다. 아이템을 최대로 강화할 경우 30%% 확률로 똥 블록 대신 황금 똥 블록을 생성합니다. 황금 똥 블록은 50%%의 확률로 최대 unique 등급의 아이템을 드롭합니다.",
   "tooltip.details.jwn_s_odds_and_ends.amulet": "앤더맨에게 공격을 받으면 (50/60/70/80/90)%% 확률로 공격한 엔더맨이 사망합니다. 단, 데미지는 막지 못합니다.",
@@ -86,6 +90,8 @@
   "tooltip.details.jwn_s_odds_and_ends.glow_ink": "채굴 속도가 2.6만큼 증가합니다.",
   "tooltip.details.jwn_s_odds_and_ends.death_scythe": "채굴 속도가 11만큼 증가합니다.",
   "tooltip.details.jwn_s_odds_and_ends.phantom_eye": "오버월드에서 침대에 누우려고 하면 침대가 폭발합니다! (이런 아이템을 왜 끝까지 강화하려고 하는 걸까요?)",
+  "tooltip.details.jwn_s_odds_and_ends.smart_guy": "블록을 캘 때, 적절한 도구가 단축바 슬롯에 있다면 그 도구로 자동 변경해 줍니다.",
+  "tooltip.details.jwn_s_odds_and_ends.battery": "사용하면 쿨타임을 초기화합니다.",
 
   "text.jwn_s_odds_and_ends.stuff_i_found.name": "아이템 이름: ",
   "text.jwn_s_odds_and_ends.stuff_i_found.rank": "아이템 등급: ",
