--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
@@ -31,6 +31,9 @@
   "item.jwn_s_odds_and_ends.phantom_eye": "펜텀의 눈",
   "item.jwn_s_odds_and_ends.smart_guy": "똑똑한 청년",
   "item.jwn_s_odds_and_ends.battery": "배터리",
+  "item.jwn_s_odds_and_ends.wool_coat": "양털 코트",
+  "item.jwn_s_odds_and_ends.fortified_egg": "달걀 강화",
+  "item.jwn_s_odds_and_ends.milk_boy": "우유는 몸에 좋아!",
 
   "block.jwn_s_odds_and_ends.poo_block": "똥",
   "block.jwn_s_odds_and_ends.gold_poo_block": "황금 똥",
@@ -64,6 +67,10 @@
   "tooltip.jwn_s_odds_and_ends.phantom_eye": "오버월드에서도 침대에서 잠을 잘 수 없습니다.",
   "tooltip.jwn_s_odds_and_ends.smart_guy": "블록을 캘 때 적절한 도구로 자동 변경해 줍니다.",
   "tooltip.jwn_s_odds_and_ends.battery": "사용하면 쿨타임을 초기화합니다.",
+  "tooltip.jwn_s_odds_and_ends.wool_coat": "추운 환경에서 받는 피해가 감소합니다.",
+  "tooltip.jwn_s_odds_and_ends.fortified_egg": "달걀을 맞은 적을 잠시 기절시킵니다.",
+  "tooltip.jwn_s_odds_and_ends.milk_boy": "현재 플레이어에게 적용된 효과를 전부 제거하고 일정 시간동안 모든 효과에 대해 면역 상태가 됩니다.",
+
 
   "tooltip.details.jwn_s_odds_and_ends.poo_item": "똥 블록을 생성합니다. 똥 블록은 50%%의 확률로 rare 등급의 아이템을 드롭합니다. 아이템을 최대로 강화할 경우 30%% 확률로 똥 블록 대신 황금 똥 블록을 생성합니다. 황금 똥 블록은 50%%의 확률로 최대 unique 등급의 아이템을 드롭합니다.",
   "tooltip.details.jwn_s_odds_and_ends.amulet": "앤더맨에게 공격을 받으면 (50/60/70/80/90)%% 확률로 공격한 엔더맨이 사망합니다. 단, 데미지는 막지 못합니다.",
@@ -92,6 +99,9 @@
   "tooltip.details.jwn_s_odds_and_ends.phantom_eye": "오버월드에서 침대에 누우려고 하면 침대가 폭발합니다! (이런 아이템을 왜 끝까지 강화하려고 하는 걸까요?)",
   "tooltip.details.jwn_s_odds_and_ends.smart_guy": "블록을 캘 때, 적절한 도구가 단축바 슬롯에 있다면 그 도구로 자동 변경해 줍니다.",
   "tooltip.details.jwn_s_odds_and_ends.battery": "사용하면 쿨타임을 초기화합니다.",
+  "tooltip.details.jwn_s_odds_and_ends.wool_coat": "추운 바이옴에서 받는 피해를 (10/20/30/40/50)%% 감소시킵니다.",
+  "tooltip.details.jwn_s_odds_and_ends.fortified_egg": "이 아이템을 가진 플레이어가 달걀 던져 적을 맞추면 해당 적은 (1.5/2/2.5)초 동안 기절합니다. 단, 플레이어는 기절하지 않습니다.",
+  "tooltip.details.jwn_s_odds_and_ends.milk_boy": "현재 플레이어에게 적용된 효과를 전부 제거합니다. 이후 (10/20/30/40/50)초 동안 모든 효과에 대해 면역 상태가 됩니다.",
 
   "text.jwn_s_odds_and_ends.stuff_i_found.name": "아이템 이름: ",
   "text.jwn_s_odds_and_ends.stuff_i_found.rank": "아이템 등급: ",
@@ -105,5 +115,7 @@
   "message.jwn_s_odds_and_ends.cell_phone.no_save": "§c먼저 오버월드에서 장소를 저장해야 합니다!",
   "message.jwn_s_odds_and_ends.dice_level_four.cannot_use": "§c업그레이드 할 수 있는 아이템이 없습니다.",
 
-  "effect.jwn_s_odds_and_ends.exp_boost": "경험치 부스트"
+  "effect.jwn_s_odds_and_ends.exp_boost": "경험치 부스트",
+  "effect.jwn_s_odds_and_ends.stun": "기절",
+  "effect.jwn_s_odds_and_ends.milk_boy": "우유는 몸에 좋아!"
 }
