--- a/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
+++ b/src/main/resources/assets/jwn_s_odds_and_ends/lang/ko_kr.json
@@ -113,7 +113,7 @@
 
   "message.jwn_s_odds_and_ends.stuff_i_found.cannot_see": "§c아직은 볼 수 없습니다!",
   "message.jwn_s_odds_and_ends.cool_time.cannot_use": "§c아직 스킬을 사용할 수 없습니다.",
-  "message.jwn_s_odds_and_ends.battery.cannot_use": "§c아직은 사용할 수 없습니다!",
+  "message.jwn_s_odds_and_ends.battery.cannot_use": "§c베터리를 연속으로 사용하면 위험합니다!",
 
   "message.jwn_s_odds_and_ends.cell_phone.overworld": "현재 위치를 저장합니다.",
   "message.jwn_s_odds_and_ends.cell_phone.no_save": "§c먼저 오버월드에서 장소를 저장해야 합니다!",
